--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <title>Nomad Tribe - The best app for digital nomads and workationers</title>
+  <meta name="google" content="notranslate" />
+  <meta http-equiv="Content-Language" content="en_US" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Quit 9-5, travel the world and work remotely. Plan your trip, find travel buddies, search through travel destinations, read guides on popular cities. For digital nomads, workationers and remote workers." />
+  <link rel="apple-touch-icon" href="" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+  <meta http-equiv="cleartype" content="on" />
+  <meta property="og:title" content="Nomad Tribe">
+  <meta property="og:url" content="https://mynomadtribe.com/" />
+  <meta property="og:description" content="Now everyone can quit 9-5, travel the world and work remotely." />
+  <meta property="og:image:secure_url" content="https://mynomadtribe.com/public/logo.png" />
+  <meta property="og:image:width" content="100" />
+  <meta property="og:image:height" content="100" />
+  <meta property="og:site_name" content="Nomad Tribe" />
+  <meta property="og:type" content="website" />
+  <meta http-equiv="last-modified" content="" />
+  <meta name="last-modified" content="" />
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+  <noscript>
+    <div
+      style="text-align:center;font-size:2em;margin-bottom:14px;height:auto;line-height:1.5;padding:56px;display:block;">
+      <strong>
+        Sorry, your browser does not support our application. Please make sure you enabled JavaScript.
+      </strong>
+    </div>
+  </noscript>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <div id="root"></div>
+</body>
+
 </html>
