--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="icon" href="logo.png" />
   <title>Nomad Tribe - The best app for digital nomads and workationers</title>
   <meta name="google" content="notranslate" />
   <meta http-equiv="Content-Language" content="en_US" />
@@ -39,6 +39,7 @@
   </noscript>
 
   <div id="root"></div>
+  <script src="/dist/client.bundle.js"></script>
 </body>
 
 </html>
